# college_football

./: .coverage  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  main.py  pyproject.toml  version-bump.sh
.github/workflows/: ci.yaml
Input Data/: 2025PortalData.json  2025RosterData.json  2025TeamsData.json
Speculative Data/: VenueData.json
college_football/: version.py
college_football/etl_data/: etl_json.py
college_football/schemas/: common.py
input_data/: 2025PlayerStatisticData.json  2025PortalData.json  2025RosterData.json  2025TeamsData.json
junit/: test-results.xml
tests/: conftest.py  test_version.py
tests/etl_data/: etl_json.py  test_etl_json.py
tests/fixtures/: 2025_teams_data_small.json  README.md
tests/schemas/: test_common.py
